# FitPath-AI

./: .gitignore  FITPATH_BUILD_SPEC.md  README.md  pyproject.toml
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  models.py  repositories.py  safety_rules.py  schemas.py
backend/app/agents/: __init__.py  final_validator.py  intake_agent.py  mcp_tools.py  mock_workflow.py  plan_generator_agent.py  plan_normalizer.py  plan_reviewer_agent.py  progress_coach_agent.py  safety_guidance_agent.py  schemas.py  trace.py  workflow.py
backend/scripts/: run_agent_demo.py
backend/tests/: __init__.py  test_agents.py  test_api.py  test_mock_workflow.py  test_phase3.py
evals/: fitness_plan_cases.json
fitness_mcp/: README.md  pyproject.toml
fitness_mcp/fitness_mcp/: __init__.py  server.py  tools.py
fitness_mcp/fitness_mcp/data/: exercises.json
fitness_mcp/tests/: __init__.py  test_mcp_server.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: CheckInModal.tsx  Dashboard.tsx  Landing.tsx  Onboarding.tsx  PlanGeneration.tsx  PlanScreen.tsx  SafetyScreen.tsx
skills/fitness-plan-review/: SKILL.md
skills/fitness_plan_review/: SKILL.md
