[project]
name = "backend"
version = "0.1.0"
description = "FitPath Backend FastAPI + Google ADK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "sqlalchemy>=2.0.0",
    "google-genai>=0.1.1",
    "google-adk>=0.5.1",
    "motor>=3.3.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
