[project]
name = "fitness-mcp"
version = "0.1.0"
description = "FitPath Fitness MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.6.0",
]

[project.scripts]
fitness-mcp = "fitness_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.0.0",
]
